django_project/feti/static/feti/css/landing-page.css
/* ... */
.result-loading, .result-empty {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: none;
}

.result-loading, .result-empty {
    text-align: center;
    font-size: 28px;
    font-weight: 900;
    opacity: 0.5;
}

.ui-autocomplete {
    max-height: 500px !important;
    z-index: 1000002 !important;
    overflow-x: hidden;
    overflow-y: scroll;
}

.ui-menu-item {
    font-weight: 300 !important;
    background: white !important;
    border-bottom: solid 1px rgba(30, 107, 255, .4) !important;
}

.ui-menu-item-wrapper {
    padding: 7px !important;
}

#result {
    height: 100%;
    border-left: 1px solid rgba(29, 104, 179, 1);
}

#result-container-wrapper {
    position: absolute;
    height: 100%;
    width: 100%;
}

#result-title {
    background: white !important;
    color: rgba(29, 104, 179, 1);
    font-size: 18px;
    padding: 15px 20px 0px 20px;
    font-weight: 500;
    width: 100%;
}

#result-filter-data {
    background: white !important;
    color: rgba(29, 104, 179, 1);
    font-size: 18px;
    padding: 0px 20px 10px 20px;
    font-weight: 500;
    width: 100%;
}

#result-filter-data > span.badge-warning{
    background: #FFBC52;
    margin-right: 5px;
}

#result-title-number {
    color: #F27317;
    font-weight: 600;
}

#shadow-map {
    background: rgba(0, 0, 0, 0.7);
    position: absolute;
    top: 55px;
    left: 0px;
    z-index: 99;
    display: none;
}

#result-detail {
    position: absolute;
    top: 55px;
    left: 0px;
    background: white !important;
    padding: 55px 20px 20px 20px !important;
    display: none;
    z-index: 99;
    overflow-y: scroll;
}

#result-detail div {
    font-weight: 500;
}

#pathways h4 {
    margin-top: 0px !important;
}

.result-container {
    background: #f0efef;
    height: 100%;
    overflow-y: scroll;
}

.result-title {
    font-size: 16px;
    color: #515151;
    background: #fff;
    padding: 4px;
    overflow: hidden;
    vertical-align: middle;
    margin-top: 4px;
    margin-left: 14px;
    border-bottom: none;
    cursor: pointer;
}

.result-title h3 {
    font-size: 16px;
    color: #515151;
    font-weight: 600;
    line-height: 20px;
    margin-top: 6px;
    margin-bottom: 0;
}

.result-title img {
    width: 54px;
    height: auto;
    margin-right: 20px;
    float: left;
}

.result-title .details {
    margin-left: 74px;
}

.result-title .courses {
    font-style: italic;
    color: #9a9a9a;
    margin-bottom: 6px;
}

.result-title .courses i {
    color: #424242;
}

.result-row {
    font-size: 14px;
    margin-top: 1px;
    margin-left: 77px;
    color: #515151;
    background: #f9f9f9;
    padding: 15px 20px;
    border-bottom: none;
    cursor: pointer;
    font-weight: 500;
}

.result-title:hover, .result-row:hover {
    background: rgba(200, 200, 200, 0.2);
}

.result-title-occupation {
    padding-left: 0px;
    padding-top: 15px;
    padding-bottom: 15px;
}

.selected-indicator-right {
    width: 20px;
    height: 30px;
}

.selected-indicator-right .fa {
    color: rgba(29, 104, 179, 1);
    font-size: 30px;
    display: none;
}

.result-title-occupation .selected-indicator-right {
    float: left;
}

.result-title-occupation .title {
    font-size: 16px;
    color: #515151;
    font-weight: 600;
    line-height: 20px;
    margin-top: 6px;
    margin-bottom: 0;
    float: left;
}

.leaflet-top {
    z-index: 500;
    margin-top: 10px;
}

.favorites {
    padding-top: 5px;
}

.favorites:hover {
    color: orange;
}

.filled {
    color: orange;
}

.step-course a {
    color: #3376ba;
    font-weight: bold;
}

/*** SEARCH BOX PROPERTY ***/

.search-bar {
    background-color: rgba(29, 104, 179, 0.9);
    display: none;
    font-size: 10px;
    height: 68px;
    position: absolute;
    top: 55px;
    width: 100%;
    z-index: 100;
}

.search-bar .m-button {
    width: 140px;
}

#search-box {
    display: inline-block;
    margin-right: 20px;
    margin-top: 11px;
    width: 100%;
    font-size: 18px;
}

#search-box i {
    color: #777;
}

#search-bar-input {
    border-radius: 23px;
    padding-left: 43px;
    font-size: 16px;
}

#search-box label {
    position: absolute;
    left: 45px;
    top: 5px;
}

#search-box #search-clear {
    text-decoration: none;
    position: absolute;
    right: 18px;
    top: 15px;
    color: #b3b3b3;
}

.filter-panel {
    background-color: rgba(243, 243, 243, 0.9);
    position: absolute;
    display: none;
    top: 123px;
    height: 200px;
    width: 100%;
    z-index: 90;
}

.filter-panel .row {
    padding-top: 15px;
    color: dimgray;
    font-weight: lighter;
    font-size: 15px;
}

.leaflet-right {
    margin-top: 65px;
}

.button-state {
    margin-top: -5px;
}

.left-details-title {
    width: 91.66666667%;
    float: left;
}

.right-details-title {
    width: 8.33333333%;
    float: left;
}

.filter-button {
    padding-top: 20px;
    font-size: 18px;
    width: 80%;
}

.filter-button :hover {
    cursor: pointer;
}

.filter-button .btn-sm {
    width: 100px;
}

a#search-icon:hover {
    cursor: pointer;
    text-decoration: none;
}

a#search-icon {
    padding-top: 10px;
    margin-left: -40px;
}

#minimum-credits .slider-selection {
	background: #BABABA;
}

.mc-slider-edge-label {
    position: absolute;
    padding-top: 20px;
}

#search-with-filter.btn-default:hover {
    cursor: pointer;
    background-color: rgba(16, 81, 146, 0.88);
}

#search-with-filter.btn-default {
    border-radius: 20px;
    background-color: rgba(29, 104, 179, 0.9);
    color: white;
}


#search-with-filter {
    float: right;
    width: 200px;
    text-align: center;
}

#clear-filter.btn-default {
    border-radius: 20px;
    background-color: #FF6666;
    color: white;
    width: 200px;
}

#clear-filter.btn-default:hover {
    cursor: pointer;
    background-color: #FF3333;
}

.slider.slider-horizontal {
    width: 400px !important;
}
/* ... */

